--- a/app/views/reports/inventory.html.erb
+++ b/app/views/reports/inventory.html.erb
@@ -1,19 +1,21 @@
 <% content_for :status_bar do %>
-  <h2>Report complesso archivistico<%= path_separator %><%= link_to @root_fond_name, dashboard_report_path %><%= path_separator %>Inventario</h2>
+  <h2>Report complesso archivistico<%= path_separator %><%= link_to @root_fond.name, dashboard_report_path %><%= path_separator %>Inventario</h2>
   <div id="links">
     <%= link_to_index "Report", reports_path %>
   </div>
 <% end %>
 <div class="span12">
   <p>
-    <%= link_to '<i class="icon-download-alt"></i> Genera RTF', inventory_report_path(@fond, :format => "rtf"),  {:class => "rtf-inventory btn btn-small"}  %>
-    <%= link_to '<i class="icon-download-alt"></i> Genera PDF', inventory_report_path(@fond, :format => "pdf"),  {:class => "pdf btn btn-small"}  %>
+    <%= link_to '<i class="icon-download-alt"></i> Genera RTF', inventory_report_path(@root_fond, :format => "rtf"), {:class => "rtf-inventory btn btn-small"} %>
+    <%= link_to '<i class="icon-download-alt"></i> Genera PDF', inventory_report_path(@root_fond, :format => "pdf"), {:class => "pdf btn btn-small"} %>
   </p>
 
   <div id="cover" class="pb_after">
     <h1>
-      <%= @root_fond_name %>
-      <span class="date"><%=  @root_fond_preferred_date %></span>
+      <%= @root_fond.name %>
+      <% if @root_fond.preferred_event.present? %>
+        <span class="date"><%= @root_fond.preferred_event.full_display_date %></span>
+      <% end %>
     </h1>
   </div>
 
@@ -114,7 +116,7 @@
         <% fond.units.each do |u| %>
           <div class="unit pbi_avoid">
             <p class="head">
-              <span class="left"><strong><%= u.sequence_number %></strong></span>
+              <span class="left"><strong><%= u.display_sequence_number_from_hash(@display_sequence_numbers) %></strong></span>
               <span class="right"><%= u.reference_number %></span>
             </p>
             <p>
