--- a/app/views/units/show.html.erb
+++ b/app/views/units/show.html.erb
@@ -26,7 +26,7 @@
     </tr>
     <tr>
       <th><%= t('title') %></th>
-      <td><%= @unit.bracketize_title_if_given %></td>
+      <td><%= @unit.formatted_title %></td>
     </tr>
     <tr>
       <th><%= t('date_event') %></th>
